--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ merge-reports/@run_merge_reports.bat
 *.out
 *.trn
 *.csv
-!arc-impedance/*/*.csv
+!arc-impedance/**/*.csv
 
 # Other files
 desktop.ini
